@@ -2,6 +2,7 @@
 -----
 * Block editor: You can now crop, zoom in/out and rotate images that are already inserted in a post.
 * Fix a deeplinking issue that could lead to the app not being open after clicking on some special "wordpress://" URLs.
+* Page List: Fixed an issue where opening a page would sometimes result in an empty editor.
 
 14.5
 -----
